--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -25,7 +25,7 @@ jobs:
     environment: production
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [14.x]
 
     steps:
     - name: Checkout
