--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+env:
+  AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
+
 permissions:
   contents: read
 
