--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -16,16 +16,17 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     environment: production
-    strategy:
-      matrix:
-        node-version: [14.x]
+    
 
     steps:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - name: Use Node.js 14
+      uses: actions/setup-node@v3
+      with:
+        node-version: 14
+        cache: 'yarn'
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
