--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
+  checkout:
     name: Deploy
     runs-on: ubuntu-latest
     environment: production
@@ -21,8 +21,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Workflow
-      uses: nolram/github-actions/.github/workflows/serverless-cicd.yml@main
-      with:
-        AWS_REGION: ${{ env.AWS_REGION }}
-        secrets: inherit
+  deploy:
+    uses: nolram/github-actions/.github/workflows/serverless-cicd.yml@main
+    with:
+      AWS_REGION: ${{ env.AWS_REGION }}
+      secrets: inherit
