--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
-
 permissions:
   contents: read
 
@@ -24,5 +21,5 @@ jobs:
   deploy:
     uses: nolram/github-actions/.github/workflows/serverless-cicd.yml@main
     with:
-      AWS_REGION: ${{ env.AWS_REGION }}
+      AWS_REGION: "us-east-1"
     secrets: inherit
