- Configuracão do workflow de serverless

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,6 @@ jobs:
     uses: nolram/github-actions/.github/workflows/serverless-cicd.yml@main
     with:
       AWS_REGION: "us-east-1"
+      project_type: "node"
+
     secrets: inherit
