--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -8,4 +8,6 @@ permissions:
 jobs:
   deploy:
     uses: nolram/github-actions/.github/workflows/check_push_node.yml@main
+    with:
+      project_type: "node"
     secrets: inherit
