- Configuracão do workflow de serverless

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
+  push:
     uses: nolram/github-actions/.github/workflows/check_push_node.yml@main
     with:
       project_type: "node"
